# tree-sitter-reef

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-stress-test.rf  tree-sitter.json
bindings/c/: tree-sitter-reef.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_reef/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterReef/: reef.h
bindings/swift/TreeSitterReefTests/: TreeSitterReefTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/definitions/: attribute_definitions.txt  classes.txt  functions.txt  unions.txt
test/corpus/expressions/: binary_operators.txt  block.txt  collection_expressions.txt  comments.txt  for_loop.txt  grab.txt  if.txt  index.txt  literals.txt  match.txt  matches.txt  member_access.txt  method_call.txt  object_initializer.txt  pattern.txt  static_member_access.txt  tuple.txt  type_identifiers.txt  unary_operators.txt  use_statement.txt  variable_access.txt  variable_declarations.txt  while_loop.txt
test/corpus/statements/: return_statements.txt  use_statement.txt
