[package]
name = "tree-sitter-reef"
description = "Tree sitter grammer for the reef language"
version = "0.1.0"
authors = ["Malachi Mackie"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "reef"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/malachimackie/tree-sitter-reef"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
